# confluence-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  vership.toml
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml  wait-for-confluence.sh
src/: cli.rs  config.rs  main.rs  markdown.rs  model.rs  output.rs  schema.rs  sync.rs
src/provider/: cloud.rs  datacenter.rs  mod.rs
tests/: e2e.rs
