[package]
name = "confluence-cli"
version = "0.1.7"
edition = "2024"
rust-version = "1.85"
description = "Markdown-sync-first Confluence CLI in Rust"
license = "MIT"
documentation = "https://docs.rs/confluence-cli"
homepage = "https://github.com/rvben/confluence-cli"
repository = "https://github.com/rvben/confluence-cli"
readme = "README.md"
keywords = ["confluence", "cli", "markdown", "sync", "atlassian"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "src/**",
    "tests/**",
]

[[bin]]
name = "confluence"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
clap_complete = "4.5.61"
comfy-table = "7.2.1"
directories = "6.0.0"
owo-colors = "4"
html2md = "0.2.15"
mime_guess = "2.0.5"
pathdiff = "0.2.3"
pulldown-cmark = "0.13.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls", "stream"] }
roxmltree = "0.20.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
similar = "2"
slug = "0.1.6"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "time"] }
url = "2.5.7"
urlencoding = "2.1.3"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
